# sydbox-1

./: .gitignore  .gitreview  BUGS  COPYRIGHT  Makefile.am  README.mkd  TODO  autogen.sh  configure.ac
data/: Makefile.am  paludis  paludis.syd-1  pandora.xml  poems.txt
doc/: Makefile.am
doc/api/: Makefile.am
doc/api/c/: Makefile.am  doxygen-filter-git.sh  doxygen.conf.in
examples/: skype.syd-1
include/pinktrace/: abi.h  compat.h  event.h  internal.h  pink.h  read.h  regs.h  socket.h  system.h.in  trace.h  write.h
include/pinktrace/easy/: call.h  callback.h  context.h  exec.h  func.h  init.h  internal.h  loop.h  pink.h  process.h  step.h
man/: Makefile.am  pandora.xml  sydbox.ent.in  sydbox.xml  sydfmt.xml
misc/: generated-file.txt  jenkins-build.sh  prep-env-clang.sh  prep-env-musl.sh  prep-env.sh  style.sh  valgrind.sh
pinktrace/: Makefile.am  abi.c  abi.h  about.h.in  compiler.h  event.c  event.h  name.c  name.h  pink.h  pinktrace-check.c  pinktrace-check.h  pipe.c  pipe.h  private.h  process.c  process.h  read-TEST.c  read.c  read.h  regs.h  regset.c  regset.h  socket-TEST.c  socket.c  socket.h  syscall.c  syscall.h  system.h.in  trace-TEST.c  trace.c  trace.h  vm.c  vm.h  write-TEST.c  write.c  write.h
pinktrace/easy/: Makefile.am  attach.c  attach.h  call.c  callback.c  callback.h  context.c  context.h  error.c  error.h  exec.c  init.c  internal.c  intr.c  intr.h  loop.c  loop.h  pink.h  private.h  process.c  process.h  step.h
pinktrace/linux/: Makefile.am  errnoent.h
pinktrace/linux/arm/: Makefile.am  syscallent.h  syscallent1.h
pinktrace/linux/i386/: Makefile.am
pinktrace/linux/ia64/: Makefile.am  syscallent.h
pinktrace/linux/powerpc/: Makefile.am  syscallent.h
pinktrace/linux/x32/: Makefile.am  syscallent.h
pinktrace/linux/x86/: syscallent.h
pinktrace/linux/x86_64/: Makefile.am  syscallent.h  syscallent2.h
pkg-config/: Makefile.am  pinktrace.pc.in  pinktrace_easy.pc.in
src/: JSON_parser.c  JSON_parser.h  Makefile.am  acl-queue.c  acl-queue.h  asyd.h  bsd-compat.h  byteorder.h  canonicalize.c  canonicalize.h  config.c  dump.c  dump.h  file.c  file.h  hashtable.c  hashtable.h  kingbee.py  log.c  log.h  macro.h  magic-acl.c  magic-bool.c  magic-cmd.c  magic-decision.c  magic-if_match.c  magic-int.c  magic-intr.c  magic-lock.c  magic-log.c  magic-match.c  magic-panic.c  magic-restrict.c  magic-sandbox.c  magic-socklist.c  magic-strlist.c  magic-trace.c  magic-whitelist.c  magic.c  magic.h  (+102 more)
syd/: Makefile.am  check-pause.c  check.c  check.h  file-TEST.c  file.c  proc-TEST.c  proc.c  seatest.c  seatest.h  strlcat.c  strlcpy.c  syd.h  time.c
t/: Makefile.am  Makefile.test  README  sydtest.sh.in  t0000-basic.sh  t0001-core-basic.sh  t0001-sydbox.sh  t0002-path-wildmatch.sh  t0003-core-basic.sh  t0003-path-realpath.sh  t0004-core-chdir.sh  test-lib-functions.sh  test-lib-sydbox.sh  test-lib.sh.in  test-runner.sh
t/bin-wrappers/: Makefile.am  shoebox.in  sydbox-dump.in  sydbox.in  sydfmt.in
t/sb/: Makefile.am  headers.h  syd_false_fork_static.c  syd_false_static.c  syd_true_fork.c  syd_true_fork_static.c  syd_true_pthread.c  syd_true_static.c
t/test-bin/: Makefile.am  realpath_mode-1.c  syd-abort-fork-static.c  syd-abort-fork.c  syd-abort-pthread-static.c  syd-abort-pthread.c  syd-abort-static.c  syd-abort.c  syd-false-fork-static.c  syd-false-fork.c  syd-false-pthread.c  syd-false-static.c  syd-mkdir-p.c  syd-true-fork-static.c  syd-true-static.c  tap.h  test-skel-0.c  test-skel-1.c  tests.h  wildtest.c
t/test-data/: Makefile.am
t/valgrind/: Makefile.am  analyze.sh  default.supp  valgrind.sh
tests/: Makefile.am  README  emily-chmod.c  emily-chown.c  emily-creat.c  emily-mkdir.c  emily-open.c  emily-stat.c  emily.c  emily.h  t000-basic.sh  t0000-basic.sh  t0001-sydbox.sh  t001-chmod.sh  t001-wildmatch.sh  t001_chmod.c  t002-canonicalize.sh  t002-chmod.sh  t002-chown.sh  t002_chown.c  t003-chmod.sh  t003-fchmodat.sh  t003-open.sh  t003_open.c  t004-chown.sh  t004-creat.sh  t004-fchmodat.sh  t004_creat.c  t005-chown.sh  t005-lchown.sh  t005_lchown.c  t006-fchownat.sh  t006-lchown.sh  t006-mkdir.sh  t006_mkdir.c  t007-fchownat.sh  t007-mknod.sh  t007-open.sh  t007_mknod.c  t008-open.sh  (+81 more)
tests/bin-wrappers/: sydbox
tests/valgrind/: default.supp  valgrind.sh
